# dl_project_template

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/hydra/launcher/: submitit_slurm.yaml
configs/model/: baseline.yaml
scripts/: train.py
src/my_model/models/: module.py
src/my_model/utils/: logging.py
